feat(nodes): activate installed capacity
